added AUTH guards & Task management

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,25 +2,6 @@
   <p style="color: white"> Loading... </p>
 </ngx-spinner>
 
-<div class="bcgImg">
-  <div class="dspFlx jus-con-cen ali-itm-cen hgt-15">
-    <h1 class="fnt-curs">Power School - Task Management</h1>
-  </div>
-
-  <hr>
-
-  <div>
-    <mat-stepper #stepper>
-      <mat-step>
-        <ng-template matStepLabel>Task Management</ng-template>
-        <app-task-list></app-task-list>
-      </mat-step>
-
-      <mat-step>
-        <ng-template matStepLabel>User Management</ng-template>
-        <app-user-list></app-user-list>
-      </mat-step>
-    </mat-stepper>
-  </div>
-
+<div class="container bcgImg width-100 height-100">
+  <router-outlet></router-outlet>
 </div>
