--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,19 @@ body {
 .ali-itm-cen {
     align-items: center;
 }
+
+.width-100 {
+    width: 100%;
+}
+
+.width-50 {
+    width: 50%;
+}
+
+.height-100 {
+    height: 100%;
+}
+
+.height-50 {
+    height: 50%;
+}
