added docker and test cases

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,8 +2,11 @@
     <div class="dspFlx jus-con-cen ali-itm-cen hgt-100px">
         <h1 class="fnt-curs">Power School - Task Management</h1>
     </div>
-
     <hr>
+
+    <div class="dspFlx ali-itm-cen jus-con-end">
+        <mat-icon>Logout</mat-icon>
+    </div>
 
     <div>
         <mat-stepper #stepper>
