--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,10 @@ body {
     justify-content: center;
 }
 
+.jus-con-end {
+    justify-content: end;
+}
+
 .ali-itm-cen {
     align-items: center;
 }
@@ -36,4 +40,12 @@ body {
 
 .height-50 {
     height: 50%;
+}
+
+.marg_left_2_perc {
+    margin-left: 2%;
+}
+
+.marg_rigt_2_perc {
+    margin-rigt: 2%;
 }
