--- a/src/app/task-list/task-list.component.scss
+++ b/src/app/task-list/task-list.component.scss
@@ -1,11 +1,10 @@
 .container {
-    max-width: 800px;
     margin: 0 auto;
 }
 
 .table-header {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 }
 
