--- a/src/app/task-list/task-list.component.scss
+++ b/src/app/task-list/task-list.component.scss
@@ -8,6 +8,10 @@
     align-items: center;
 }
 
+.task-form-card {
+    padding: 2%;
+}
+
 .mat-form-field {
     width: 100%;
     margin-bottom: 16px;
